Bug 855010: Use nsAutoPtr instead of scoped_ptr in LocalDebugInfoSymbolizer::FindCFIFrameInfo(). r=BenWa